--- a/src/work.njk
+++ b/src/work.njk
@@ -20,13 +20,13 @@ permalink: /work/{{ tag }}/
 </div>
     {% set taglist = collections[ tag ] %}
     {% for post in taglist %}
-        <div class="flex gap-8 border-t border-gray-200 py-12">
-            <div class="w-3/5">
+        <div class="flex flex-col md:flex-row gap-4 md:gap-8 border-t border-gray-200 py-6 md:py-12">
+            <div class="w-full md:w-3/5">
                 <a href="{{post.url}}">
                     <img class="w-full rounded-xl" src="{{post.data.image}}" />
                 </a>
             </div>
-            <div class="flex flex-col relative w-2/5">
+            <div class="flex flex-col relative w-full md:w-2/5">
                 <h2 class="text-2xl"><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
                 <span class="text-md">{{post.data.tech}}</span>
                 <span class="text-md">{{post.data.year}}</span>
