--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@ title: Alex Harris Web Development
 ---
 <div class="flex flex-col md:flex-row gap-8 items-center justify-between pt-6 pb-12 md:py-36">
     <div class="w-full md:w-1/2">
-        <p class="text-3xl md:px-8">
+        <p class="text-2xl md:text-3xl md:px-8">
             I am a freelance web developer in Oakland, CA focused on helping arts and environmental organizations, non-profits and small businesses communicate on the web.        </p>
     </div>
     <div class="w-full md:w-1/2 flex justify-center">
@@ -34,7 +34,7 @@ title: Alex Harris Web Development
     </div>          
 </div>
 <div class="flex flex-col items-center">
-    <a href="/about" class="inline-block mx-auto  text-xl text-center bg-[#fff6de] hover:bg-black hover:text-white px-6 py-4 border border-black shadow-sm cursor-pointer rounded-xl mb-36">View services</a>
+    <a href="/about" class="inline-block mx-auto  text-xl text-center bg-[#fff6de] hover:bg-black hover:text-white px-6 py-4 border border-black shadow-sm cursor-pointer rounded-xl mb-16">View services</a>
 </div>
 
 
@@ -44,40 +44,43 @@ title: Alex Harris Web Development
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="w-full md:w-3/5 md:pr-16">
-            <img class="rounded-xl w-full pb-4" src="/assets/images/bampfa/bampfa-building.jpg">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/bampfa/bampfa-building.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center">
             <h2 class="text-xl uppercase pb-3 font-bold">BAMPFA</h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
-            <a class="text-lg" href="/work/bampfa">view project</a>
+            <a class="text-lg mt-4 underline" href="/work/bampfa">View project</a>
         </div>
     </div>    
 </div>
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row-reverse items-center justify-between">
         <div class="w-full md:w-3/5 md:pl-16">
-            <img class="rounded-xl w-full pb-4" src="/assets/images/kg/kg-logo.png">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/kg/kg-logo.png">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center">
             <h2 class="text-xl uppercase pb-3 font-bold">Kessenick Gamma</h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
+            <a class="text-lg mt-4 underline" href="/work/kessenick-gamma">View project</a>
         </div>
     </div>    
 </div>
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-3/5 md:pr-16">
-            <img class="rounded-xl w-full pb-4" src="/assets/images/ringo/ringo-homepage.jpg">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/ringo-homepage.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center">
-            <h2 class="text-xl uppercase pb-3 font-bold">Kessenick Gamma</h2>
+            <h2 class="text-xl uppercase pb-3 font-bold">Ringo Studio</h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
+            <a class="text-lg mt-4 underline" href="/work/ringo-studio">View project</a>
         </div>
     </div>    
 </div>
-<div class="flex flex-col p-4 items-center mb-36 py-12 px-4">
-    <a href="/work/everything/" class="text-xl text-center bg-[#fff6de] hover:bg-black hover:text-white px-6 py-4 border border-black shadow-sm mb-16 cursor-pointer rounded-xl">View all work</a>
-    <div class="flex flex-wrap gap-4">
+<div class="flex flex-col p-4 items-center mb-16 md:mb-36 pb-12 px-4">
+    <a href="/work/everything/" class="text-xl text-center bg-[#fff6de] hover:bg-black hover:text-white px-6 py-4 border border-black shadow-sm mb-4 cursor-pointer rounded-xl">View all work</a>
+    or select a category
+    <div class="flex flex-wrap gap-4 mt-4">
         <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black cursor-pointer" href="">Arts Organizations</a>
         <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black cursor-pointer">Small Business</a>
         <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black cursor-pointer">Education</a>
