projects and more

--- a/src/projects.njk
+++ b/src/projects.njk
@@ -4,23 +4,31 @@ title: Projects
 ---
 
 
-<h1 class="text-5xl mb-12">{{ title }}</h1>
-<p class="text-2xl md:text-3xl w-full md:w-1/2 mb-24">
-    In addition to client work, I  also have a few of my own projects that I work on from time to time.
+<h1 class="sr-only">{{ title }}</h1>
+<p class="text-2xl md:text-3xl w-full md:w-2/3 my-16">
+    In addition to client work, I also have a few of my own projects that I work on from time to time.
 </p>
 <div class="flex flex-col md:flex-row gap-4 md:gap-8 border-t border-gray-200 py-6 md:py-12">
     <div class="flex flex-col relative w-full md:w-1/2">
         <h2 class="text-4xl mb-8">Dither it!</h2>
-        <p>Dither it! is a web application that reduces the number of colors an image uses, using various algorithms, providing a particular "lo-fi" aesthetic and often a reduced file size. No client, just a for fun one. </p>
+        <p>Dither it! is a web application that reduces the number of colors an image uses, using various algorithms, providing a particular "lo-fi" aesthetic and often a reduced file size. Built using Vue.js and tailwind, I have been maintaining and updating Dither it! since 2019. In that time, over 135,000 visitors have dithered images over a million times. </p>
     </div>    
     <div class="w-full md:w-1/2">
         <a href="https://ditherit.com">
             <img class="w-full rounded-xl" src="/assets/images/dither-it.jpg" />
         </a>
     </div>
-
-    
 </div>
-
+<div class="flex flex-col md:flex-row gap-4 md:gap-8 border-t border-gray-200 py-6 md:py-12">
+    <div class="flex flex-col relative w-full md:w-1/2">
+        <h2 class="text-4xl mb-8">Dither it! for Figma</h2>
+        <p>A plugin for dithering images directly in Figma.</p>
+    </div>    
+    <div class="w-full md:w-1/2">
+        <a href="https://ditherit.com">
+            <img class="w-full rounded-xl" src="/assets/images/dither-it.jpg" />
+        </a>
+    </div>
+</div>
 
 
