--- a/src/about.njk
+++ b/src/about.njk
@@ -3,8 +3,8 @@ layout: layout.njk
 title: About
 ---
 
-<h1 class="text-5xl mb-12">{{ title }}</h1>
-<div class="w-full md:w-1/2 my-16">
+<h1 class="sr-only">{{ title }}</h1>
+<div class="w-full md:w-2/3 my-16">
     <p class="text-2xl md:text-3xl">
         AHWD is the freelance web development practice of Alex Harris.
     </p>
