--- a/src/index.njk
+++ b/src/index.njk
@@ -1,11 +1,12 @@
 ---
 layout: layout.njk
-title: Alex Harris Web Development
+title: Home
 ---
 <div class="flex flex-col md:flex-row gap-8 items-center justify-between pt-6 pb-12 md:py-36">
     <div class="w-full md:w-1/2">
         <p class="text-2xl md:text-3xl md:px-8">
-            I am a freelance web developer in Oakland, CA focused on helping arts and environmental organizations, non-profits and small businesses communicate on the web.        </p>
+            I am a freelance web developer in Oakland, CA focused on helping arts and environmental organizations, non-profits and small businesses communicate on the web.        
+        </p>
     </div>
     <div class="w-full md:w-1/2 flex justify-center">
         <svg  class="w-4/5" viewBox="0 0 370 276" fill="none" xmlns="http://www.w3.org/2000/svg">
