--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -2,7 +2,7 @@
 layout: layout.njk
 ---
 
-<div class="flex flex-row mt-12 justify-between w-full items-start">
+<div class="flex flex-row justify-between w-full items-start">
     <h1 class="text-4xl mb-12">{{ title }}</h1>
     <a class="pill-button text-md px-3 pb-1 rounded-full border border-black hover:border-red-600 cursor-pointer flex gap-4 items-center" href="{{url}}">
         Visit Site
