--- a/src/index.njk
+++ b/src/index.njk
@@ -39,7 +39,7 @@ title: Home
 </div>
 
 
-<h2 class="header-text md:pb-16">Select Work</h2>
+<h2 class="text-xl uppercase md:pb-12">Select Work</h2>
 
 
 <div class="mb-16 md:mb-32">
