--- a/src/about.njk
+++ b/src/about.njk
@@ -3,13 +3,13 @@ layout: layout.njk
 title: About
 ---
 
-<h1 class="sr-only">{{ title }}</h1>
+<h1 class="text-4xl mb-12">{{ title }}</h1>
 <div class="w-full md:w-2/3 my-16">
-    <p class="text-2xl md:text-3xl">
+    <p class="text-xl md:text-2xl">
         AHWD is the freelance web development practice of Alex Harris.
     </p>
 </div>
-<h2 class="text-2xl">Services</h2>   
+<h2 class="text-xl uppercase">Services</h2>   
 <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 my-12 gap-x-8 gap-y-16">
     <div>
         <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Research.</h3>
@@ -32,10 +32,10 @@ title: About
         <p class="text-lg">Many smaller organizations often don't have the expertise or resources to maintenance on their own after launch. I provide ongoing as-needed support to many clients.</p>
     </div>           
 </div>
-<h2 class="text-2xl">Philosophy</h2>  
+<h2 class="text-xl uppercase">Philosophy</h2>  
 <div class="mt-8 mb-24">blah blah </div>
-<h2 class="text-2xl">About Me</h2>  
-<div class="flex flex-col md:flex-row gap-x-8 gap-y-16 mb-24">
+<h2 class="text-xl uppercase">About Me</h2>  
+<div class="flex flex-col md:flex-row gap-x-8 gap-y-16 mt-8 mb-24">
     <div class="w-full md:w-1/2">
         <p class="mb-8">
             Hello, I'm Alex. I have been making websites professionally for over 10 years, and have a wide variety of experience. As a developer at Cast Iron Coding in Portland, OR, I built sites for clients, and trained and supported them in their ongoing use. As the Web Editor and Electronic Communications Manager at UC Berkeley’s BAMPFA I helped to build and maintain their digital presence, as well as coordinated with contractors, co-workers, and students to achieve complex strategic and technical communications goals. I have been out on my own since 2018, and am looking forward to helping you with your website.
