--- a/src/index.njk
+++ b/src/index.njk
@@ -20,7 +20,7 @@ title: Home
         </svg>
     </div>
 </div>
-<div class="grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 items-center pb-16">
+<!-- <div class="grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 items-center pb-16">
     <div>
         <h2 class="header-text">Web Development</h2>
         <p>Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
@@ -33,10 +33,10 @@ title: Home
         <h2 class="header-text">Project Management</h2>
         <p>Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
     </div>          
-</div>
-<div class="flex flex-col items-center">
+</div> -->
+<!-- <div class="flex flex-col items-center">
     <a href="/about" class="inline-block mx-auto  text-xl text-center bg-[#fff6de] hover:bg-black hover:text-white px-6 py-4 border border-black shadow-sm cursor-pointer rounded-xl mb-16">View services</a>
-</div>
+</div> -->
 
 
 <h2 class="text-xl uppercase md:pb-12">Select Work</h2>
