--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Grab title from the page data and dump it here -->
   <title>AHWD - {{ title }}</title>
-  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/tailwind-output.css">  
   <script src="/script.js"></script>
 </head>
@@ -14,9 +13,9 @@
   <!-- Grab the content from the page data and dump it here, and mark it as safe -->
   <!-- Safe docs: https://mozilla.github.io/nunjucks/templating.html#safe -->
 
-  <header id="header" class="w-full sticky top-0  px-4 md:px-8 py-8 flex flex-col md:flex-row bg-gray-50">
+  <header id="header" class="w-full sticky top-0  py-4 px-8 flex flex-col md:flex-row justify-between bg-gray-50 z-50">
     <!-- text-4xl -->
-      <a href="/" id="logo" class="socko outline-text link-white transition-all hover:tracking-widest text-9xl">AHWD.</a>
+      <a href="/" id="logo" class="socko outline-text link-white transition-all duration-700 hover:tracking-widest text-9xl">AHWD.</a>
     <!-- {% if title == 'Home' %}
       <a href="/" class="socko text-6xl outline-text link-white">AHWD.</a>
     {% elseif '/work/' in page.url %}
@@ -26,6 +25,7 @@
          
     {% endif %} -->
     <nav class="flex flex-wrap justify-between items-center gap-8">  
+      <a href="/services">Services</a>
       <a href="/work/everything">Work</a>
       <a href="/projects">Projects</a>
       <a href="/about">About</a>
@@ -49,10 +49,12 @@
       <button class="border border-black px-4 py-2 hover:bg-black hover:text-white cursor-pointer rounded-xl" type="submit">Send Message</button>
     </form>    
 </div>  
-  <footer class="w-full flex flex-col md:flex-row justify-between bg-gray-800 text-white p-4 md:p-8">
-    <a href="/" class="socko text-5xl outline-text link-white transition-all hover:tracking-widest">AHWD.</a>
+  <footer class="w-full flex flex-col md:flex-row justify-between bg-gray-800 text-white p-8 ">
+    <span>AHWD.</span>
     <nav class="flex flex-wrap justify-between items-center gap-8">  
+      <a class="link-white" href="/services">Services</a>
       <a class="link-white" href="/work/everything">Work</a>
+      <a class="link-white" href="/projects">Projects</a>
       <a class="link-white" href="/about">About</a>
     </nav>
   </footer>
