--- a/src/services.njk
+++ b/src/services.njk
@@ -11,23 +11,23 @@ title: Services
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 my-12 gap-x-8 gap-y-16 ">
     <div>
-        <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Research.</h3>
+        <h3 class="text-2xl mb-4">Research</h3>
         <p class="text-lg">Your website is not the first website, and there is much to be learned from </p>
     </div>
     <div>
-        <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Content.</h3>
+        <h3 class="text-2xl pb-4">Content</h3>
         <p class="text-lg">High quality, well organized content is the foundation of a successful website. I can help you organize your content into a clear “information architecture” that will allow your users to easily find whatever they are looking for.</p>
     </div>    
     <div>
-        <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Design.</h3>
+        <h3 class="text-2xl pb-4">Design</h3>
         <p class="text-lg">Good design makes a project shine, whether it is a new logo and identity, just the right font, or a comprehensive design system. Some design work I can do myself, sometimes it makes more sense to partner with a dedicated designer (or maybe you already have one in mind!).</p>
     </div>
     <div>
-        <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Development.</h3>
+        <h3 class="text-2xl pb-4">Development</h3>
         <p class="text-lg">I write code and build sites with an eye towards simplicity, usability and maintainability over the long term. Ideally, you could fire me and a new developer could come in and easily understand what I have built and how to continue with the work.</p>
     </div>    
     <div>
-        <h3 class="socko text-5xl pr-1 pb-4 outline-text text-white tracking-wide">Support.</h3>
+        <h3 class="text-2xl pb-4">Support</h3>
         <p class="text-lg">Many smaller organizations often don't have the expertise or resources to maintenance on their own after launch. I provide ongoing as-needed support to many clients.</p>
     </div>           
 </div>
