standardize pill button, fix dark mode toggle

--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -18,9 +18,9 @@ layout: layout.njk
                 {% endfor %}
             </div>
         </div>
-        <a class="text-md px-3 pb-1 rounded-full border border-black dark:border-white hover:border-red-400 dark:hover:border-red-400 cursor-pointer flex gap-4 items-center" href="{{url}}">
+        <a class="pill-button" href="{{url}}">
             Visit Site
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" class="stroke-black stroke-2 dark:stroke-white" fill="none" stroke-linecap="butt" stroke-linejoin="arcs"><g fill="none" fill-rule="evenodd"><path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8"/></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-linecap="butt" stroke-linejoin="arcs"><g fill="none" fill-rule="evenodd"><path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8"/></g></svg>
         </a>        
 
     </div>
