--- a/src/index.njk
+++ b/src/index.njk
@@ -55,7 +55,7 @@ title: Home
         <div class="md:w-2/5 flex flex-col justify-center items-start">
             <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/ringo-studio">Ringo Studio</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
-            <a class="text-md px-3 pb-1 rounded-full border border-black dark:border-white cursor-pointer mt-4" href="/work/ringo-studio">View project</a>
+            <a class="pill-button" href="/work/ringo-studio">View project</a>
         </div>
     </div>    
 </div>
@@ -67,7 +67,7 @@ title: Home
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
             <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/kessenick-gamma">Kessenick Gamma</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
-            <a class="text-md px-3 pb-1 rounded-full border border-black dark:border-white cursor-pointer mt-4" href="/work/kessenick-gamma">View project</a>
+            <a class="pill-button" href="/work/kessenick-gamma">View project</a>
         </div>
     </div>    
 </div>
@@ -79,7 +79,7 @@ title: Home
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
             <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/bampfa">BAMPFA</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
-            <a class="text-md px-3 pb-1 rounded-full border border-black dark:border-white cursor-pointer mt-4" href="/work/bampfa">View project</a>
+            <a class="pill-button" href="/work/bampfa">View project</a>
         </div>
     </div>    
 </div>
@@ -87,11 +87,10 @@ title: Home
     <a href="/work/everything/" class="text-xl text-center hover:text-white px-6 py-4 border border-black dark:border-white shadow-sm mb-4 cursor-pointer rounded-xl">View all work</a>
     or select a category
     <div class="flex flex-wrap gap-4 mt-4">
-        <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black dark:border-white cursor-pointer" href="">Arts Organizations</a>
-        <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black dark:border-white cursor-pointer">Small Business</a>
-        <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black dark:border-white cursor-pointer">Education</a>
-        <!-- <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black dark:border-white cursor-pointer">Design</a> -->
-        <a class="text-xl px-4 pt-2 pb-3 rounded-full border border-black dark:border-white cursor-pointer">The Environment</a>
+        <a class="pill-button" href="">Arts Organizations</a>
+        <a class="pill-button">Small Business</a>
+        <a class="pill-button">Education</a>
+        <a class="pill-button">The Environment</a>
     </div>
 </div>
 
