--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
   <!-- Grab the content from the page data and dump it here, and mark it as safe -->
   <!-- Safe docs: https://mozilla.github.io/nunjucks/templating.html#safe -->
 
-  <header id="header" class="w-full sticky top-0 py-4 px-8 flex flex-col md:flex-row justify-between z-50 bg-gray-50 dark:bg-blue-900">
+  <header id="header" class="w-full sticky top-0 py-4 px-8 flex flex-col md:flex-row justify-between items-start z-50 bg-gray-50 dark:bg-blue-900">
     <!-- text-4xl -->
       <a href="/" id="logo" class="socko outline-text link-white transition-all duration-700 hover:tracking-widest text-9xl">AHWD.</a>
     <!-- {% if title == 'Home' %}
@@ -24,7 +24,7 @@
       <span class="socko text-6xl outline-text text-white link-white"><a href="/">AHWD / {{title}}</a></span>
          
     {% endif %} -->
-    <nav class="flex flex-wrap justify-between items-center gap-8">  
+    <nav class="flex flex-wrap justify-between items-center gap-8 mt-4">  
       <a class="hover:underline hover:underline-offset-4" href="/services">Services</a>
       <a class="hover:underline hover:underline-offset-4" href="/work/everything">Work</a>
       <a class="hover:underline hover:underline-offset-4" href="/projects">Projects</a>
@@ -36,7 +36,7 @@
     {{ content | safe }}
   </main>
  
-  <footer class="fixed inset-0 z-0 w-full flex flex-col bg-gray-100 dark:bg-blue-950 dark:text-white items-center justify-between pb-16">
+  <footer class="fixed inset-0 z-0 w-full flex flex-col bg-gray-100 dark:bg-blue-950 dark:text-white items-center justify-end pb-16">
     <div class="w-full md:w-3/5 p-8 py-24 flex flex-col items-center">
       <span class="socko tracking-widest text-5xl pb-10 outline-text text-white link-white">say hello</span>         
       <p class="text-2xl mb-8">
