remove projects, add service text rough draft

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: layout.njk
 title: Home
 ---
 
-<p class="text-4xl md:text-5xl w-full md:w-3/5 mb-24">
+<p class="text-4xl md:text-5xl w-full lg:w-3/5 mb-24">
     I am a web developer in Oakland, CA focused on helping arts and environmental organizations, non-profits and small businesses communicate on the web.        
 </p>
 
@@ -45,7 +45,6 @@ title: Home
 
 
 <h2 class="text-xl uppercase md:pb-12 font-bold">Featured Work —</h2>
-
 
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row items-center justify-between">
